1.24.0
------
TODO: looping and playlists, also printout of lists in control_generic
      (avoid looping stuff there)
- libmpg123 version 43:
-- Add flags MPG123_NO_PEEK_END and MPG123_FORCE_SEEKABLE, as suggested
   by Bent Bisballe Nyeng.
- Avoid repeating genre in metadata printout for specifications like
  (144)Thrash Metal.
- libout123/coreaudio:
-- Use AudioComponents API on OSX >= 10.6 (thanks to Michael Weiser).
-- Fix behaviour of out123_drop(), not killing the output anymore
   without re-opening the device (bug 236, thanks to Taihei fir the fix).

1.23.8
------
- Fix long-standing bad memory read (via integer underflow) in ID3 parser
  for crafted ID3v2 tags with tiny size information (bug 240). Thanks to
  Han Lee & Jerold Hoong for the detailed report.

1.23.7
------
- Fix the bad RPM spec file (broken since out123 addition, thanks
  to Srikanth Rao for noticing).
- More out123_pause() in generic control mode, working around
  bug 236. The coreaudio output needs to be more robust, though.
- Do not undef MPG123_EXPORT in the headers, rather be prepared for it
  being defined already. This fixes MSVC builds, broken since 1.23.0
  (bug 239).

1.23.6
------
- call out123_pause() instead of out123_stop() in remote control STOP
  command, fixing the regression in 1.23.x of not being able to resume
  playback with another LOAD unless the new track has differing audio
  format (bug 234)

1.23.5
------
- libout123:
-- fix build of portaudio and SDL on win32 (too many parentheses,
   thanks to Sandro Cumerlato for pointing it out)
-- make out123_errcode() return OUT123_BAD_HANDLE as documented
   (adding that value to the error enum, was documented but missing),
   again thanks to Sandro
- fix windows-builds.sh (shell quoting in copying stage) and add some
  bits to shipped header to make it directly usable in MSVC (define ssize_t,
  bug 232)
- no overwriting of LIBS in Makefile (build system regression in 1.23,